# a_browser

./: .gitignore  Cargo.toml  build.cmd  build.sh  index.html  ui.py
src/: gui.rs  iced_gui.rs  layout.rs  lex.rs  lib.rs  load.rs  main.rs  response.rs  rpc_server.rs
