[package]
name = "a_browser"
version = "0.1.0"
authors = ["Gedalia Kott <gedkott@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "*"
webpki-roots = "*"
webpki = "*"
native-windows-gui = "1.0.11"
native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.
gl = "*"
glutin = "*"
