[package]
name = "a_browser"
version = "0.1.0"
authors = ["Gedalia Kott <gedkott@gmail.com>"]
edition = "2018"


[lib]
name = "layout_engine"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "*"
webpki-roots = "*"
webpki = "*"
serde = { version = "*", features = ["derive"] }

[dependencies.cpython]
version = "0.1"
features = ["extension-module"]